Fix feature comp small screen column alignment

--- a/css/components/feature.css
+++ b/css/components/feature.css
@@ -2,7 +2,7 @@
 
 .c-feature {
   display: grid;
-  grid-template-columns: 65% auto;
+  grid-template-columns: 1fr auto;
   grid-template-rows: auto auto 1fr auto;
   gap: var(--space-base);
   padding: var(--space-base);
@@ -72,8 +72,10 @@
   }  
 }
 
-@container (min-width: 600px) {
+@media (width > 50rem) {
   .c-feature {
+    grid-template-columns: 65% auto;
+
     & h1 {
       grid-column: 2;
     }
